[package]
name = "autolock"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
winapi = { version = "0.3.9", features = [
    "winuser",
    "windef",
    "tlhelp32",
    "handleapi",
    "minwindef",
    "synchapi",
    "errhandlingapi",
    "winerror",
    "winbase",
] }
image = { version = "0.24", features = ["ico"] }
tray-icon = "0.22.0"
raw-window-handle = "0.6.2"

[build-dependencies]
winres = "^0.1.12"

[profile.release]
rpath = false
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
incremental = false

[profile.dev]
opt-level = 1
