[package]
name = "autolock"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
image = { version = "0.24", features = ["ico"] }
tray-icon = "0.22.0"
raw-window-handle = "0.6.2"

[build-dependencies]
winres = "^0.1.12"

[profile.release]
rpath = false
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
incremental = false

[profile.dev]
opt-level = 1
